update before meeting

--- a/sources_internal.tex
+++ b/sources_internal.tex
@@ -60,4 +60,9 @@
     \enddata
     \tablerefs{C16$=${\citet{2016A\string&A...586A..44C}}; H18$=${\citet{2018ApJS..236...52H}}; 
                S18$=${\citet{2018ApJS..237...22S}}; S19$=${\citet{2019ApJS..245...21S}}; Y20$=$this study.}
+    \tablecomments{The dust masses for L1455 IRS 2, EDJ2009-235, EDJ2009-172 are taken from \citet{2018ApJS..238...19T}
+                   by applying a gas-to-dust ratio of 100.  The dust mass of unresolved multiple systems, such as L1448 NW, Per-emb 33 B/C,
+                   Per-emb 17, Per-emb 44, Per-emb 27, Per-emb 36, and Per-emb 55, are taken to be the total mass of multiple protostars.
+                   The dust mass of Per-emb 40 is assumed to be the dust mass of Per-emb 40 A
+                   as the dust mass of Per-emb 40 B is an upper limit.}
 \end{deluxetable*}
